--- a/VoiceMC/VoiceMC Towny/index.html
+++ b/VoiceMC/VoiceMC Towny/index.html
@@ -60,8 +60,9 @@ Updates</font></button>
 
 
   </body>
-
-    <text><p><IMG SRC="https://cdn.discordapp.com/emojis/573688181161984002.gif?v=1" alt="Emrald" style="width:30px;height:30px;"></IMG>
+    <text>
+    
+    <p><IMG SRC="https://cdn.discordapp.com/emojis/573688181161984002.gif?v=1" alt="Emrald" style="width:30px;height:30px;"></IMG>
 
     <font size="+3"><strong>*Towny Rules*</strong></font><br>
  -Respect staff & fellow users!<br>
@@ -113,11 +114,49 @@ This includes: <br>
 - TP traps.
 </p>
 
-<font size="-5"><text>Admins have final say in the interpretation of any rules listed or not listed in this document.
-</text></font>
-<br>
-<font size="-5"><text><strong>Punishments:</strong> currently under the discretion of the moderator/admin.
-</text></font>
-  </text>
 
+<p>
+<br>
+
+<font size="+2">
+<strong>Towny Commands</strong>
+</font>
+<p>
+<p>
+<font size="+2">
+<strong>Noobies</strong>
+</font>
+<p>
+/hub - takes you back to the hub <p>
+/wild - Spawns you in the middel of nowhere<p>
+/spawn - Takes you back to spawn<p>
+/warp {} - Warps you to areas in spawn<p>
+/shop - Buy ans sell items<p>
+/bal - Shows how much money you have<p>
+/baltop - Shows who has the most money<p>
+/cryptodisplay - Buy and sell crypto<p>
+/sethome {name} - Sets home<p>
+/home {name} - Takes you home<p>
+/recall [$5,000] - Takes you to where you died last after respawn<p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<br>
+<font size="-5">Admins have final say in the interpretation of any rules listed or not listed in this document.
+</font>
+<br>
+<font size="-5"><strong>Punishments:</strong> currently under the discretion of the moderator/admin.
+</font>
   </html>
